# stratum

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: tests.yml
include/: math_utils.h
lib/: CMakeLists.txt  math_utils.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  alpha.cpp  sample_test.cpp
tests/cat/: meow.cpp
